{{$NEXT}}

0.100006 2016-01-18

- The documentation incorrectly stated the the MaxMind::DB::Writer::Tree->new
  parameter "map_key_type_callback" was optional. It is actually required.


0.100005 2015-10-26

- $tree->insert_network now takes an optional additional-arguments hash
  reference parameter. If this hash contains a truthy value for the
  force_overwrite key, any data for the network will be overwritten even when
  merge_record_collisions is enabled.


0.100004 2015-07-15

- Previously two equivalent data structures added to a database could end up
  with different keys, causing both to be added to the final file separately.
  The key generation was updated to reduce the likelihood of this happening.


0.100003 2015-06-04

- Fixed a bug in the data thawing code that incorrectly incremented the
  SV referencing the HV rather than the HV. This could cause warnings about
  attempts to free an unreferenced SV.
- Fixed memory leaks on merge failures.
- Minor code cleanups.


0.100002 2015-04-23

- Fixed test suite on OS X: Altered to cope with different Net::Works network
  rendering on OS X


0.100001 2015-03-12

- Updated to the latest versions of the Math::Int128 (0.21) and Math::Int64
  (0.51) C API integration code, as well as depending on the newest version of
  the module from Perl.


0.080000 2015-03-04

- Implemented $tree->freeze_tree and
  MaxMind::DB::Writer::Tree->new_from_frozen_tree methods. This provides a way
  of passing the tree between different processes.

- Made the attribute reader methods for all values passed to the constructor
  public.

- Added some docs on how insert order affects overlapping networks. GitHub
  #18.

- Fixed memory leaks when adding data to the tree.

- Reduced the size of various structs used in the C code to reduce memory
  usage.


0.060000 2014-11-11

- The map_key_type_callback argument for the MaxMind::DB::Writer::Tree class
  is now required. In some use cases it's not really used but in the most